<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Job Hiring Mobile App</string>
    <string name="drawer_open">"Drawer Open"</string>
    <string name="drawer_close">"Drawer Close"</string>
    <string name="todo">TODO</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_need_new_account" tools:ignore="StringEscaping">Do not have an Account, Need New Account?</string>
    <string name="or_login_with">or Login with</string>

    <string name="select"> Your Barangay</string>
    <string name="gender"> Gender</string>

    <string-array name="barangay">
        <item>Bancoro</item>
        <item>Maabud North</item>
        <item>Maabud South</item>
        <item>Balete</item>
    </string-array>

</resources>