<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorProfile"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textCursorDrawable="@color/black" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textCursorDrawable="@color/black" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button"
        android:minHeight="52dp"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_password_link"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account_need_new_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/textColorHighlightInverse"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_account_link"
        android:layout_marginTop="15dp"
        android:text="@string/or_login_with"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="?android:attr/textColorHighlightInverse"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/google_signin_button"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/google" />

    </LinearLayout>

    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="5dp"
        android:text="Forgot Password?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>